--- a/web/course/java-script/lesson_05/ClassWork.html
+++ b/web/course/java-script/lesson_05/ClassWork.html
@@ -11,7 +11,7 @@
         surname: "Deichuk",
         age: 23,
 
-        run: function () {
+        show: function () {
             document.write(manager.name + " " + manager.surname + " " + manager.age + "<br/>");
         }
     };
@@ -26,7 +26,7 @@
         document.write(anotherManager.name + " " + anotherManager.surname + " " + anotherManager.age + "<br/>");
     };
 
-    manager.run();
+    manager.show();
     anotherManager.show();
 </script>
 </body>
